--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "0.0.32",
     "@types/express-session": "^1.15.6",
+    "axios": "^0.17.1",
     "body-parser": "~1.16.0",
     "compression": "^1.7.1",
     "cookie-parser": "~1.4.0",
