--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,5 +11,6 @@ pipelines:
         caches:
           - node
         script: # Modify the commands below to build your repository.
+          - cd server
           - npm install
           - npm test
