--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,10 @@ pipelines:
           - cd server
           - npm install
           - npm test
+          - cd ..
+          - cd client
+          - npm install
+          - ng test
 definitions:
   caches:
     node: node_modules
