--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,7 +17,7 @@ pipelines:
           - cd ..
           - cd client
           - npm install
-          - ng test
+          - npm test
 definitions:
   caches:
     node: node_modules
