--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,7 @@ pipelines:
           - cd server
           - npm install
           - npm test
+          - npm start
 definitions:
   caches:
     node: node_modules
