bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,8 +13,9 @@ pipelines:
         script: # Modify the commands below to build your repository.
           - cd server
           - npm install
+          - tsc
           - npm test
           - npm run lint
 definitions:
   caches:
-    node: node_modules
+    node: server/node_modules
