--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,13 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon --require dotenv/config ./out/server/app/server.js\" ",
+    "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon --require dotenv/config out/server.js\" ",
     "lint": "tslint --project tsconfig.json \"./app/**/*.ts\" --format stylish",
     "test": "mocha -r ts-node/register app/**/*.spec.ts",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "clean": "rimraf out node_modules",
-		"postinstall": "rimraf false",
-		"node": "tsc && node --inspect --require dotenv/config ./out/server/app/server.js"
+    "postinstall": "rimraf false"
   },
   "dependencies": {
     "@types/compression": "0.0.35",
