--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^5.2.3",
     "@angular/router": "^5.2.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "glob": "^7.1.2",
     "ng-click-outside": "^3.2.0",
+    "ng-socket-io": "git+https://github.com/bergeronjulien/ng-socket-io.git",
     "rxjs": "^5.5.2",
     "socket.io": "1.4.4",
     "socket.io-client": "1.4.4",
