--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,5 +20,9 @@
             "es2017",
             "dom"
         ]
-    }
+    },
+    "include": [
+        "src/**/*.ts",
+        "node_modules/ng-socket-io/**/*.ts"
+    ]
 }
