--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,7 @@
     "reflect-metadata": "^0.1.10",
     "serve-favicon": "~2.3.0",
     "session": "^0.1.0",
-    "socket.io": "1.4.4",
+    "socket.io": "^1.4.4",
     "systemjs": "0.19.39",
     "ts-node": "^4.1.0"
   },
