--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -5,7 +5,7 @@
 	"singleQuote": false,
 	"trailingComma": "es5",
 	"bracketSpacing": true,
-	"arrowParens": "avoid",
+	"arrowParens": "always",
 	"printWidth": 120,
 	"overrides": [
     {
