--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "express": "4.15.4",
     "express-session": "^1.15.6",
     "inversify": "^4.3.0",
+    "mongoose": "^5.0.6",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "reflect-metadata": "^0.1.10",
@@ -46,6 +47,8 @@
     "@types/express": "4.0.37",
     "@types/express-serve-static-core": "4.0.50",
     "@types/mocha": "2.2.42",
+    "@types/mongodb": "^3.0.5",
+    "@types/mongoose": "^5.0.1",
     "@types/morgan": "1.7.32",
     "@types/node": "^8.0.26",
     "@types/node-uuid": "0.0.28",
