--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon --require dotenv/config out/server.js\" ",
+    "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon --require dotenv/config out/server/app/server.js\" ",
     "lint": "tslint --project tsconfig.json \"./app/**/*.ts\" --format stylish",
     "test": "mocha -r ts-node/register app/**/*.spec.ts",
     "tsc": "tsc",
