--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.3",
+    "@angular/animations": "^5.2.6",
+    "@angular/cdk": "^5.2.2",
     "@angular/common": "^5.2.3",
     "@angular/compiler": "^5.2.3",
     "@angular/core": "^5.2.3",
     "@angular/forms": "^5.2.3",
     "@angular/http": "^5.2.3",
+    "@angular/material": "^5.2.2",
     "@angular/platform-browser": "^5.2.3",
     "@angular/platform-browser-dynamic": "^5.2.3",
     "@angular/router": "^5.2.3",
