--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.4.1",
     "glob": "^7.1.2",
     "ng-click-outside": "^3.2.0",
+    "ng-socket-io": "^0.2.4",
     "rxjs": "^5.5.2",
     "socket.io": "1.4.4",
     "socket.io-client": "1.4.4",
