--- a/client/package.json
+++ b/client/package.json
@@ -20,15 +20,18 @@
     "@angular/platform-browser": "^5.2.3",
     "@angular/platform-browser-dynamic": "^5.2.3",
     "@angular/router": "^5.2.3",
+    "@types/mongoose": "^5.0.2",
     "core-js": "^2.4.1",
     "glob": "^7.1.2",
+    "mongoose": "^5.0.7",
     "ng-click-outside": "^3.2.0",
     "ng-socket-io": "^0.2.4",
     "rxjs": "^5.5.2",
+    "socket-io": "^1.0.0",
     "socket.io": "1.4.4",
     "socket.io-client": "1.4.4",
     "stats.js": "^0.17.0",
-    "three": "~0.84.0",
+    "three": "^0.84.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
