--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "0.0.32",
     "@types/express-session": "^1.15.6",
+    "@types/mongoose": "^5.0.2",
     "axios": "^0.17.1",
     "body-parser": "~1.16.0",
     "compression": "^1.7.1",
@@ -28,6 +29,7 @@
     "express": "4.15.4",
     "express-session": "^1.15.6",
     "inversify": "^4.3.0",
+    "mongoose": "^5.0.7",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "reflect-metadata": "^0.1.10",
@@ -35,6 +37,7 @@
     "session": "^0.1.0",
     "socket.io": "1.4.4",
     "systemjs": "0.19.39",
+    "three": "^0.90.0",
     "ts-node": "^4.1.0"
   },
   "devDependencies": {
