--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint --type-check --format stylish"
+    "lint": "ng lint --type-check --format stylish --fix"
   },
   "private": true,
   "dependencies": {
