unit tests gridservice

--- a/client/package.json
+++ b/client/package.json
@@ -12,19 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.6",
-    "@angular/cdk": "^5.2.2",
+    "@angular/cdk": "^5.2.3",
     "@angular/common": "^5.2.3",
     "@angular/compiler": "^5.2.3",
     "@angular/core": "^5.2.3",
     "@angular/forms": "^5.2.3",
     "@angular/http": "^5.2.3",
-    "@angular/material": "^5.2.2",
+    "@angular/material": "^5.2.3",
     "@angular/platform-browser": "^5.2.3",
     "@angular/platform-browser-dynamic": "^5.2.3",
     "@angular/router": "^5.2.3",
     "@types/mongoose": "^5.0.2",
+    "animations": "0.0.0",
     "core-js": "^2.4.1",
     "glob": "^7.1.2",
+    "material": "^0.2.6",
     "mongoose": "^5.0.7",
     "ng-click-outside": "^3.2.0",
     "ng-socket-io": "^0.2.4",
