--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ image: node:6.9.4
 pipelines:
   default:
     - step:
+        name: Server test
         caches:
           - node
         script: # Modify the commands below to build your repository.
@@ -15,6 +16,14 @@ pipelines:
           - npm install
           - npm test
           - npm run lint
+    - step:
+      name: Client build and test
+      caches: nodeClient
+      script:
+        - cd client
+        - npm install
+        - ng build
 definitions:
   caches:
     node: server/node_modules
+    nodeClient: client/node_modules
