--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -40,6 +40,13 @@ pipelines:
         script:
           - cd client
           - npm run lint
+    - step:
+      name: Client build and test
+      caches: nodeClient
+      script:
+        - cd client
+        - npm install
+        - ng build
 definitions:
   caches:
     node: server/node_modules
