--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,13 +17,14 @@ pipelines:
           - npm test
           - npm run lint
     - step:
-      name: Client build and test
-      caches: nodeClient
-      script:
+        name: Client build and test
+        caches: 
+          - nodeclient
+        script:
         - cd client
         - npm install
         - ng build
 definitions:
   caches:
     node: server/node_modules
-    nodeClient: client/node_modules
+    nodeclient: client/node_modules
