--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -41,9 +41,10 @@ pipelines:
           - cd client
           - npm run lint
     - step:
-      name: Client build and test
-      caches: nodeClient
-      script:
+        name: Client build and test
+        caches: 
+          - nodeclient
+        script:
         - cd client
         - npm install
         - ng build
