--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -61,6 +61,9 @@ pipelines:
         caches: 
           - nodeclient
         script:
+        - cd server
+        - npm install
+        - cd ..
         - cd client
         - npm --version
         - npm install
