--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -46,6 +46,9 @@ pipelines:
           - nodeclient
           - node
         script:
+        - cd server
+        - npm install
+        - cd ..
         - cd client
         - npm --version
         - npm install
