--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon --require dotenv/config out/server/app/server.js\" ",
-    "start-test": "tsc && concurrently --kill-others \"tsc -w \" \"node --require dotenv/config out/server/app/server.js\" ",
+    "build": "tsc && concurrently --kill-others \"tsc\" \"nodemon --require dotenv/config out/server/app/server.js\" ",
     "lint": "tslint --project tsconfig.json \"./app/**/*.ts\" --format stylish --fix",
     "test": "mocha -r ts-node/register app/**/*.spec.ts",
     "tsc": "tsc",
