--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,13 +8,14 @@ image: node:8.9.4
 pipelines:
   default:
     - step:
-        name: Server test
+        name: Server build and test
         caches:
           - node
         script: # Modify the commands below to build your repository.
           - cd server
           - npm --version
           - npm install
+          - npm run-script build
           - npm test
           - npm run lint
     - step:
@@ -29,6 +30,7 @@ pipelines:
         - npm --version
         - npm install
         - npm run-script build
+        - npm test
 definitions:
   caches:
     node: server/node_modules
