--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,7 +23,6 @@ pipelines:
           - cd server
           - npm --version
           - npm install
-          - npm run-script build
           - npm test
     - step:
         name: Server run lint
@@ -61,10 +60,8 @@ pipelines:
         name: Client build and test
         caches: 
           - nodeclient
+          - node
         script:
-        - cd server
-        - npm install
-        - cd ..
         - cd client
         - npm --version
         - npm install
