--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ image: node:8.9.4
 pipelines:
   default:
     - step:
-        name: Server build and test
+        name: Server test
         caches:
           - node
         script:
@@ -33,14 +33,6 @@ pipelines:
         - npm --version
         - npm install
         - npm run-script build
-    - step:
-        name: Client run tests
-        caches:
-          - nodeclient
-          - node
-        script:
-          - cd client
-          - npm run-script pipeline
     - step:
         name: Client run lint
         caches:
