--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ image: node:8.9.4
 pipelines:
   default:
     - step:
-        name: Server build and test
+        name: Server test
         caches:
           - node
         script:
@@ -19,7 +19,7 @@ pipelines:
     - step:
         name: Server run lint
         caches:
-          - node
+          -node
         script:
           - cd server
           - npm run lint
@@ -34,31 +34,12 @@ pipelines:
         - npm install
         - npm run-script build
     - step:
-        name: Client run tests
-        caches:
-          - nodeclient
-          - node
-        script:
-          - cd client
-          - npm run-script pipeline
-    - step:
         name: Client run lint
         caches:
           - nodeclient
         script:
           - cd client
           - npm run lint
-    - step:
-        name: Client build and test
-        caches: 
-          - nodeclient
-          - node
-        script:
-        - cd client
-        - npm --version
-        - npm install
-        - npm run-script build
-        - npm test
 definitions:
   caches:
     node: server/node_modules
