--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,20 +1,47 @@
-# This is a sample build configuration for JavaScript.
-# Check our guides at https://confluence.atlassian.com/x/14UWN for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: node:6.9.4
+#pipeline config
+#
+#WARNING: Does NOT ..... I REPEAT ..... does NOT BUILD server
+#WARNING: Does NOT ..... I REPEAT ..... does NOT run TEST on client
+#
+
+image: node:8.9.4
 
 pipelines:
   default:
     - step:
+        name: Server test
         caches:
           - node
-        script: # Modify the commands below to build your repository.
+        script:
           - cd server
+          - npm --version
           - npm install
           - npm test
+    - step:
+        name: Server run lint
+        caches:
+          - node
+        script:
+          - cd server
+          - npm run lint
+    - step:
+        name: Client build
+        caches: 
+          - nodeclient
+          - node
+        script:
+        - cd client
+        - npm --version
+        - npm install
+        - npm run-script build
+    - step:
+        name: Client run lint
+        caches:
+          - nodeclient
+        script:
+          - cd client
           - npm run lint
 definitions:
   caches:
     node: server/node_modules
+    nodeclient: client/node_modules
