package.json edited online with Bitbucket

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "pipeline": "ng test --watch=false",
     "lint": "ng lint --type-check --format stylish --fix"
   },
   "private": true,
