--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,17 +24,13 @@ jobs:
 
       - run:
         name: Install packages in server
-        command: |
-          cd server
-          npm i
-          npm --version
+        working_directory: server
+        command: npm i && npm --version
 
       - run:
         name: Install packages in client
-        command: |
-          cd client
-          npm i
-          npm --version
+        working_directory: client
+        command: npm i && npm --version
 
       - save_cache:
           paths:
@@ -48,33 +44,28 @@ jobs:
 
       - run:
           name: Server test
-          command: |
-            cd server
-            npm test
+          working_directory: server
+          command: npm test
 
       - run:
           name: Server run lint
-          command: |
-            cd server
-            npm run lint
+          working_directory: server
+          command: npm run lint
 
       - run:
           name: Client build
-          command: |
-            cd client
-            npm run-script build
+          working_directory: client
+          command: npm run-script build
 
       - run:
           name: Client run tests
-          command: |
-            cd client
-            npm run-script pipeline
+          working_directory: client
+          command: npm run-script pipeline
 
       - run:
           name: Client run tests
-          command: |
-            cd client
-            npm run lint
+          working_directory: client
+          command: npm run lint
 
 workflows:
   version: 2
