--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.0.7",
     "ng-click-outside": "^3.2.0",
     "ng-socket-io": "^0.2.4",
+    "phantomjs-polyfill": "0.0.2",
     "rxjs": "^5.5.2",
     "socket-io": "^1.0.0",
     "socket.io": "1.4.4",
