--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "animations": "0.0.0",
     "core-js": "^2.4.1",
     "glob": "^7.1.2",
+    "karma-phantomjs-launcher": "^1.0.4",
     "material": "^0.2.6",
     "mongoose": "^5.0.7",
     "ng-click-outside": "^3.2.0",
