--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.0.7",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
+    "npm": "^5.7.1",
     "reflect-metadata": "^0.1.10",
     "serve-favicon": "~2.3.0",
     "session": "^0.1.0",
