--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,14 @@
     "@angular/router": "^5.2.3",
     "@types/mongoose": "^5.0.2",
     "animations": "0.0.0",
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.14.1",
     "core-js": "^2.4.1",
     "glob": "^7.1.2",
     "karma-phantomjs-launcher": "^1.0.4",
     "material": "^0.2.6",
     "mongoose": "^5.0.7",
+    "moxios": "^0.4.0",
     "ng-click-outside": "^3.2.0",
     "ng-socket-io": "^0.2.4",
     "phantomjs-polyfill": "0.0.2",
