--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/errorhandler": "0.0.32",
     "@types/express-session": "^1.15.6",
     "@types/mongoose": "^5.0.7",
+    "@types/request-promise-native": "^1.0.14",
     "animations": "0.0.0",
     "axios": "^0.17.1",
     "body-parser": "~1.16.0",
@@ -37,6 +38,8 @@
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "reflect-metadata": "^0.1.10",
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5",
     "serve-favicon": "~2.3.0",
     "session": "^0.1.0",
     "socket.io": "1.4.4",
