Switch the grid generation to do/while and made the grid immutable

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,7 +36,7 @@
             "stopOnEntry": true,
             "sourceMaps": true,
             "port": 9229,
-            "restart":true
+            "restart":false
         },
         {
             "name": "Launch TypeScript",
