--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "0.0.32",
     "@types/express-session": "^1.15.6",
+    "@types/lodash": "^4.14.106",
     "@types/mongoose": "^5.0.7",
     "@types/request-promise-native": "^1.0.14",
     "animations": "0.0.0",
@@ -34,8 +35,10 @@
     "errorhandler": "^1.5.0",
     "express": "4.15.4",
     "express-session": "^1.15.6",
+    "immutable": "^3.8.2",
     "inversify": "^4.3.0",
     "line-intersect": "^2.1.1",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.10",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
