--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,7 @@
     "inversify": "^4.3.0",
     "line-intersect": "^2.1.1",
     "lodash": "^4.17.5",
-    "mongoose": "^5.0.10",
+    "mongoose": "^5.0.15",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "npm": "^5.7.1",
@@ -47,6 +47,7 @@
     "request-promise-native": "^1.0.5",
     "serve-favicon": "~2.3.0",
     "session": "^0.1.0",
+    "socket-io": "^1.0.0",
     "socket.io": "1.4.4",
     "systemjs": "0.19.39",
     "three": "^0.90.0",
